# eci-slm

./: .gitignore  README.md  cli.py  main.py  pyproject.toml
artifact_sft/: train_sft.npz  val_sft.npz
data/instruct/: eci_faq_1_2.txt  eci_faq_1_4.txt  eci_faq_3_13.txt  eci_faq_3_22.txt  eci_faq_3_23.txt  eci_faq_conduct_of_elections_qna.txt  eci_faq_section_1_q01.txt  eci_faq_section_1_q03.txt  eci_faq_section_1_q05.txt  eci_faq_section_1_q06.txt  eci_faq_section_1_q07.txt  eci_faq_section_1_q08.txt  eci_faq_section_3_q14.txt  eci_faq_section_3_q21.txt  eci_faq_section_4_q15.txt  eci_faq_section_5_q16.txt
data/instruct_jsonl/: train.jsonl  val.jsonl
data/pretrain/: candidate_handbook.txt  conduct_of_elections_guide.txt  eci_overview.txt  eci_wikipedia_overview.txt  electoral_process_workflow.txt  electoral_roll_blo_guide.txt  force_deployment_manual.txt  model_code_of_conduct.txt  observer_handbook_reference.txt  police_handbook_reference.txt  returning_officer_sop_manual.txt
data/pretrain_augmented/: candidate_handbook_reference_augmented.txt  conduct_of_elections_guide_augmented.txt  eci_overview_augmented.txt  eci_wikipedia_overview_augmented.txt  electoral_process_workflow_augmented.txt  electoral_roll_blo_guide_augmented.txt  force_deployment_manual_augmented.txt  (+4 more)
docs/: ARCHITECHTURE.md  CHANGELOG.md  DATA.md  DOCS.md  RESEARCH.md  RESULT.md
notebooks/: my_kaggle_result.ipynb  old.ipynb  train.ipynb  unsloth.ipynb
results/: results.csv  results.json
src/: checkpoint.py  dataloader.py  eval.py  sft.py  slm.py  tokenizer.py
(+26 files in other folders)
